# np_config

./: .gitignore  .pdm-python  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
resources/: zk_backup.json
src/: __init__.py  np_config.py
src/np_config/: __init__.py  config.py  np_config.py  rigs.py  utils.py
tests/: test_main.py  test_rig.py
